# sciplots

./: .gitignore  CHANGES.md  README.md  plot-examples-root.py  pyproject.toml
examples/: plot-examples.py
examples/aero_data/: aero_data_loader.py  zZhangLyuAero.csv
hilab_plot/: __init__.py  common_tools.py  styles_discovery.py
hilab_plot/styles/languages/: latex-sc.mplstyle
hilab_plot/styles/ticks/: ticks-inward.mplstyle
sciplots/: __init__.py  com_funcs_set_style.py  common_tools.py
sciplots/styles/journals/: ieee.mplstyle
sciplots/styles/languages/: latex-sc.mplstyle  latex.mplstyle
sciplots/styles/ticks/: ticks-inward.mplstyle
sciplots/tests/: test_scienceplots.py
