[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [{name = "HanamyWarrior", email = "rongerch@outlook.com"}]
description = "Format Matplotlib for scientific plotting"
license = {file = "LICENSE"}
maintainers = [{name = "HanamyWarrior", email = "rongerch@outlook.com"}]
name = "sciplots"
readme = {file = "README.md", content-type = "text/markdown"}

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Visualization",
  "Framework :: Matplotlib",
]
keywords = [
  "matplotlib-style-sheets",
  "matplotlib-figures",
  "scientific-papers",
  "thesis-template",
  "matplotlib-styles",
  "python",
]

dynamic = ["version"]

dependencies = ["matplotlib"]
requires-python = ">=3.8"

[project.optional-dependencies]
all = ["SciencePlots[test]"]
test = ["pytest", "numpy"]

[project.urls]
Changelog = "https://github.com/garrettj403/SciencePlots/blob/master/CHANGES.md"
Documentation = "https://github.com/garrettj403/SciencePlots/wiki"
Homepage = "https://github.com/garrettj403/SciencePlots/wiki"
Issues = "https://github.com/garrettj403/SciencePlots/issues"
Repository = "https://github.com/garrettj403/SciencePlots"

[tool.setuptools_scm]
# blank section to avoid warning

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["scienceplots/tests"]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

# Exclude annotations and type comments
lint.ignore = ["ANN"]
